--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@tailwindcss/vite": "^4.1.11",
-        "@vitejs/plugin-vue": "^4.5.0",
         "axios": "^1.8.2",
         "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "sass": "^1.56.1",
         "tailwindcss": "^4.1.11",
-        "vite": "^6.2.4",
-        "vue": "^3.2.37"
+        "vite": "^6.2.4"
     },
     "dependencies": {
         "@alpinejs/persist": "^3.14.1",
@@ -31,8 +29,10 @@
         "chart.js": "^4.4.6",
         "dropzone": "^6.0.0-beta.2",
         "flatpickr": "^4.6.13",
+        "flowbite": "^3.1.2",
         "fullcalendar": "^6.1.15",
         "jsvectormap": "^1.6.0",
+        "simple-datatables": "^10.0.0",
         "swiper": "^11.1.14"
     }
 }
