--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "fullcalendar": "^6.1.15",
         "jsvectormap": "^1.6.0",
         "simple-datatables": "^10.0.0",
+        "sweetalert2": "^11.6.13",
         "swiper": "^11.1.14"
     }
 }
