--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "alpinejs": "^3.14.1",
         "apexcharts": "^3.51.0",
         "chart.js": "^4.4.6",
+        "datatables.net-dt": "^2.3.2",
         "dropzone": "^6.0.0-beta.2",
         "flatpickr": "^4.6.13",
         "flowbite": "^3.1.2",
