Feat : create akun partner Feat : create role partner Adjustment : get data reservation, product and availibility by partner

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "files": [
             "app/Helpers/Route.php",
             "app/Helpers/CreateLink.php",
-            "app/Helpers/FetchAPI.php"
+            "app/Helpers/FetchAPI.php",
+            "app/Helpers/Users.php"
         ]
     },
     "autoload-dev": {
